--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:hardwareAccelerated="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +20,9 @@
 
         <activity android:name=".ui.activity.EasyCustomActivity" />
         <activity android:name=".ui.activity.CellViewActivity" />
+
+        <activity android:name=".ui.activity.DrawPictureActivity" />
+        <activity android:name=".ui.activity.CheckMarkActivity" />
     </application>
 
 </manifest>
